# ut_multirobot_sim

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  manifest.xml  run_tests.sh  simulator_link  stack.xml  visualization.rviz  visualization_multi.rviz  visualizations_double_robot.rviz
cobot_linux/: CMakeLists.txt  InstallPackages  manifest.xml
cobot_linux/src/cobot_sim/: CMakeLists.txt  cobot_sim.cpp
cobot_linux/src/hardware/: fcs.h  laser_scanner.cpp  laser_scanner_main.cpp  serial.h
cobot_linux/src/libraries/CRF++-0.58/: config.status  crf_learn  crf_test
cobot_linux/src/libraries/CRF++-0.58/autom4te.cache/: requests  traces.0
cobot_linux/src/libraries/connected_components/: main.cpp
cobot_linux/src/libraries/dijkstra/: Makefile  dgraph.h  dgraph_factory.cpp  dgraph_factory.h  dijkstra.cpp  dijkstra.h  run_dijkstra.cpp
cobot_linux/src/libraries/distance_transform/: Makefile  dt.h  image.h  pnmfile.h
cobot_linux/src/libraries/google-glog/: Makefile.in  aclocal.m4
cobot_linux/src/libraries/libdecodeqr/src/: configure  configure.in
cobot_linux/src/libraries/libdecodeqr/src/libdecodeqr/: Makefile.in
cobot_linux/src/libraries/libdecodeqr/src/sample/webcam/: Makefile.in  webcam.cpp
cobot_linux/src/libraries/libdecodeqr/src/test/: test_codedata.cpp  test_galois.cpp
cobot_linux/src/libraries/maximal_cliques/: graphbuilder.hpp  main.h  maximalcliquegenerator.h  utility.hpp
cobot_linux/src/map/: build_object_map_main.cpp  vector_map3d.cpp  vector_map3d.h
cobot_msgs/: CMakeLists.txt
cobot_msgs/msg/: CobotDriveMsg.msg
cobot_msgs/msg_gen/lisp/: AckermanDriveMsg.lisp  CobotDriveMsg.lisp  _package.lisp  _package_AckermanDriveMsg.lisp  _package_CobotDriveMsg.lisp  cobot_msgs-msg.asd
config/: GDC1.navigation.txt  ackermann_config.lua  bwibot_config.lua  cobot_config.lua  default_init_config.lua  diffdrive_config.lua  double_jackal_config.lua  double_robot_init_config.lua  f1_config.lua  hall_door.lua  human_config.lua  sim_config.lua  sim_jackal_config.lua  topic_config.lua  ut_automata_config.lua  ut_jackal_config.lua
config/gdc_gym/: gdc_gym.launch  pedsim_launch.launch  scene.xml  sim_config.lua
config/gdc_gym_gen/: humans.lua  launch.launch  pedsim_launch.launch  pips_launch.launch  ref_launch.launch  scene.xml  sim_config.lua
config/human_examples/: human_example.launch  humans.lua  robot.lua  sim_config.lua  ut_automata_config.lua
config/pedsim_example/: humans.lua  jackal_config.lua  pedsim_example.launch  pedsim_launch.launch  scene.xml  sim_config.lua
config/social_navigation/: sim_config.lua
config/social_navigation/blind_corner/: robot.lua  sim_config.lua
config/social_navigation/following_human/: human_leader.lua  robot.lua  sim_config.lua
config/social_navigation/hallway/: LongHallway.txt  default_init_config.lua  (+2 more)
evaluator/: .gitignore  Visualizations.ipynb  evaluator.py  full_viz.ipynb  recorder.py  runner.py  rw_analysis.ipynb  summarize_run.py  visualize_social.ipynb
launch/: autonav_jackal.launch  autonav_two_jackals.launch  blind_corner.launch  following_human.launch  hallway.launch  leading_human.launch  navigating_crowd.launch  package_delivery.launch  ut_jackal.launch
maps/: GDC1.json  GDC2.json  GDC2.txt  GDC3.json  GDC3.txt  GDC3_bridge.json  GDC3_bridge.txt  GHC_Overlay.psd  GHCedges.txt  TestMap.json  TestMap.txt  atlas.txt  scaleMap.m  txtToJson.c
maps/CS403/: CS403_vector.txt
maps/GDC1/: GDC1_vector.txt
maps/LGRC1/: LGRC1_vector.txt  MapData.txt
maps/LGRC3/: LGRC3.fx  LGRC3_vector.txt  MapData.txt
msg/: AckermanDriveMsg.msg  AckermannDriveMsg.msg  CobotDriveMsg.msg  DoorArrayMsg.msg  DoorControlMsg.msg  DoorStateMsg.msg  HumanControlCommand.msg  HumanStateArrayMsg.msg  HumanStateMsg.msg  Localization2DMsg.msg  MarkerColor.msg  RobotStateMsg.msg  SimulatorStateMsg.msg  robotStep.msg
pedestrian_simulation/: pedsim_utmrs_proxy.py
pedestrian_simulation/launch/: GDC1.launch
pedestrian_simulation/scenarios/: test_hallway.xml
scenario_generator/: make_scenarios.py  scenario_generator.py
scenario_generator/templates/: human.lua  launch.launch  pedsim_launch.launch  robot.lua  scene.xml  sim_config.lua
scripts/: README.md  cpplint.py  example.yml  generate_config.py  human_config_template.txt  init_config_template.txt  lint.sh  lint_diff.sh  multiple_deliveries.sh  precommit.sh  prepush.sh  run_simulator.bash  setup_hooks.sh
src/cobot_sim/: cobot_sim.cpp  cobot_sim.h  cobot_sim_main.cpp
src/doorman/: README.md  doorman.cpp
src/following_human_controller/: navigation.cc  navigation.h  navigation_main.cc
src/hallway_controller/: navigation.cc  navigation.h  navigation_main.cc
src/hardware/: CMakeLists.txt  drive.cpp  drive.h  fcs.cpp  laser_scanner.h  serial.cc
src/human_controller/: human_controller.cpp
src/leading_human_controller/: navigation.cc  navigation.h  navigation_main.cc
src/libraries/: CMakeLists.txt
src/map/: CMakeLists.txt  vector_map.cpp  vector_map.h
src/package_delivery_controller/: navigation.cc  navigation.h  navigation_main.cc
src/pedestrian_simulation/: manifest.xml
src/ros_social_gym/: eval_bc.py  eval_dqn.py  eval_env.py  eval_gail.py  eval_greedy.py  eval_pips.py  eval_ref.py  make_scenarios.py  ros_social_gym.py  social_dataset.py  social_gail_dataset.py  test_env.py  train_bc.py  train_dqn.py  train_gail.py  train_ppo.py
src/simulator/: ackermann_model.cpp  ackermann_model.h  cobot_model.cpp  cobot_model.h  diff_drive_model.cpp  diff_drive_model.h  door.cpp  door.h  entity_base.cpp  entity_base.h  human_object.cpp  human_object.h  omnidirectional_model.cpp  omnidirectional_model.h  robot_model.cpp  robot_model.h  shape_template.cpp  shape_template.h  short_term_object.cpp  short_term_object.h  simulator.cpp  simulator.h  simulator_main.cpp  vector_map.cc  vector_map.cpp  vector_map.h
src/state_switcher_rviz_plugin/: CMakeLists.txt  manifest.xml  plugin_description.xml
src/state_switcher_rviz_plugin/src/: state_switcher.cpp  state_switcher.hpp
srv/: utmrsStepper.srv
util/: jackal_nav_0.lua  jackal_nav_1.lua
(+84 files in other folders)
